test/syntax/fail/lexer/char/unterminated.expected
File "dummy.sync", line 1, character 11:
 1 | let x = '
               ^

Error: Unterminated character literal.
